--- a/code files/index.css
+++ b/code files/index.css
@@ -1,1 +1,20 @@
+/* CSS RULES */
+
+/* Reset */
+
+* {
+    border: 0; 
+    box-sizing: border-box;
+}
+
+.profile-image {
+        max-width: 240px;
+        min-height: 240px; 
+        background-image: url(/assets/official\ portrait-job.jpeg);
+        border: 1px solid black; 
+        background-size: cover; 
+        background-position: center;
+        object-fit: contain; 
+}
+
 
