--- a/code files/index.css
+++ b/code files/index.css
@@ -9,11 +9,13 @@
 
 
 body {
-   font-family: "Playfair Display", serif;
+  font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
 }
+
+h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display", "serif";}
 
 .profile-image {
         max-width: 240px;
